--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
+    "react-script-tag": "^1.1.2",
     "react-scripts": "4.0.1",
+    "react-scroll": "^1.8.4",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
